--- a/web/templates/entry_forms/absence.html
+++ b/web/templates/entry_forms/absence.html
@@ -37,19 +37,19 @@
                     <select id="date_year" name="date_year" required>
                         <option value="">Year</option>
                         {% for year in range(2025, 2019, -1) %}
-                        <option value="{{ year }}" {% if entry and absence_date and absence_date[:4] == year|string %}selected{% elif not entry and today[:4] == year|string %}selected{% endif %}>{{ year }}</option>
+                        <option value="{{ year }}" {% if entry and absence_date and absence_date[:4] == year|string %}selected{% elif not is_edit and today[:4] == year|string %}selected{% endif %}>{{ year }}</option>
                         {% endfor %}
                     </select>
                     <select id="date_month" name="date_month" required>
                         <option value="">Month</option>
                         {% for month in range(1, 13) %}
-                        <option value="{{ '%02d'|format(month) }}" {% if entry and absence_date and absence_date[5:7] == '%02d'|format(month) %}selected{% elif not entry and today[5:7] == '%02d'|format(month) %}selected{% endif %}>{{ '%02d'|format(month) }}</option>
+                        <option value="{{ '%02d'|format(month) }}" {% if entry and absence_date and absence_date[5:7] == '%02d'|format(month) %}selected{% elif not is_edit and today[5:7] == '%02d'|format(month) %}selected{% endif %}>{{ '%02d'|format(month) }}</option>
                         {% endfor %}
                     </select>
                     <select id="date_day" name="date_day" required>
                         <option value="">Day</option>
                         {% for day in range(1, 32) %}
-                        <option value="{{ '%02d'|format(day) }}" {% if entry and absence_date and absence_date[8:10] == '%02d'|format(day) %}selected{% elif not entry and today[8:10] == '%02d'|format(day) %}selected{% endif %}>{{ '%02d'|format(day) }}</option>
+                        <option value="{{ '%02d'|format(day) }}" {% if entry and absence_date and absence_date[8:10] == '%02d'|format(day) %}selected{% elif not is_edit and today[8:10] == '%02d'|format(day) %}selected{% endif %}>{{ '%02d'|format(day) }}</option>
                         {% endfor %}
                     </select>
                 </div>
