--- a/web/templates/ledger.html
+++ b/web/templates/ledger.html
@@ -27,9 +27,10 @@
             <div class="search-box">
                 <span class="search-icon">🔍</span>
                 <input type="text" 
-                       id="search-input" 
-                       placeholder="Search amount or description..."
-                       onkeyup="searchEntries()">
+                    id="search-input" 
+                    placeholder="Search amount or description..."
+                    onkeyup="searchEntries()">
+                <button type="button" class="clear-search" style="display: none;" onclick="clearSearch()">✕</button>
             </div>
         </div>
         
